# cli

./: Cargo.toml  README.md
crates/atopile/: Cargo.toml
crates/atopile/src/: lib.rs  normalizer.rs  writer.rs
crates/atopile/tests/: atopile_test.rs
crates/kicad2schematics/: Cargo.toml
crates/kicad2schematics/src/: lib.rs
crates/schematics/: Cargo.toml  build.rs
crates/schematics/src/: component.rs  edatasheet.rs  lib.rs  net.rs  part.rs  standard_library.rs
crates/schematics/tests/: schematics_test.rs
src/: convert.rs  diff.rs  main.rs
